--- a/app/src/main/res/layout/content_onboarding_unified_welcome.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_welcome.xml
@@ -141,6 +141,8 @@
         android:layout_height="wrap_content"
         android:onClick="onContinueClicked"
         android:theme="@style/OnboardingButtonPrimaryCta"
+        android:text="@string/onboardingContinue"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
