--- a/app/src/main/res/layout-land/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout-land/content_onboarding_default_browser.xml
@@ -32,12 +32,12 @@
         android:layout_marginBottom="42dp"
         android:importantForAccessibility="no"
         android:src="@drawable/set_as_default_browser_illustration"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintWidth_max="300dp"
+        app:layout_constraintBottom_toTopOf="@id/continueButton"
+        app:layout_constraintDimensionRatio="1"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@id/privateSearchTitle"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintBottom_toTopOf="@id/continueButton"
+        app:layout_constraintStart_toStartOf="@id/continueButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -48,14 +48,15 @@
         android:lineSpacingExtra="3sp"
         android:text="@string/onboardingDefaultBrowserTitle"
         android:textAlignment="center"
+        android:layout_marginStart="20dp"
         android:textColor="@color/almostBlack"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/privateSearchSubtitle"
+        app:layout_constraintEnd_toEndOf="@id/continueButton"
         app:layout_constraintStart_toEndOf="@id/defaultBrowserImage"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/privateSearchSubtitle"/>
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/privateSearchSubtitle"
@@ -68,10 +69,10 @@
         android:textColor="@color/brownishGrayTwo"
         android:textSize="15sp"
         android:textStyle="normal"
-        app:layout_constraintTop_toBottomOf="@id/privateSearchTitle"
         app:layout_constraintBottom_toTopOf="@id/continueButton"
         app:layout_constraintEnd_toEndOf="@id/privateSearchTitle"
         app:layout_constraintStart_toStartOf="@id/privateSearchTitle"
+        app:layout_constraintTop_toBottomOf="@id/privateSearchTitle"
         app:layout_constraintWidth_max="500dp" />
 
 
