--- a/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
@@ -32,28 +32,15 @@
 
         <TextView
             android:id="@+id/privateSearchTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif"
-            android:lineSpacingExtra="3sp"
             android:text="@string/unifiedOnboardingPrivateSearchTitle"
-            android:textColor="@color/almostBlack"
-            android:textSize="17sp"
-            android:textStyle="bold"
+            style="@style/OnboardingListItemTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/privateSearchSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="sans-serif"
             android:text="@string/unifiedOnboardingPrivateSearchSubtitle"
-            android:textColor="@color/brownishGrayTwo"
-            android:textSize="15sp"
-            android:textStyle="normal"
+            style="@style/OnboardingListItemSubtitle"
             app:layout_constraintStart_toStartOf="@id/privateSearchTitle"
             app:layout_constraintTop_toBottomOf="@id/privateSearchTitle" />
 
