--- a/app/src/main/res/layout/content_onboarding_unified_data_clearing.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_data_clearing.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -22,37 +21,25 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dataClearingGroup"
+        style="@style/OnboardingListItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:background="#B3F"
-        style="@style/OnboardingListItem"
         app:layout_constraintEnd_toEndOf="@id/browsingProtectionGroup"
         app:layout_constraintStart_toStartOf="@id/browsingProtectionGroup"
         app:layout_constraintTop_toBottomOf="@id/browsingProtectionGroup">
 
         <TextView
             android:id="@+id/dataClearingTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif"
-            android:lineSpacingExtra="3sp"
+            style="@style/OnboardingListItemTitle"
             android:text="@string/unifiedOnboardingDataClearingTitle"
-            android:textColor="@color/almostBlack"
-            android:textSize="17sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/dataClearingSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
+            style="@style/OnboardingListItemSubtitle"
             android:text="@string/unifiedOnboardingDataClearingSubtitle"
-            android:textColor="@color/brownishGrayTwo"
-            android:textSize="15sp"
-            android:textStyle="normal"
             app:layout_constraintStart_toStartOf="@+id/dataClearingTitle"
             app:layout_constraintTop_toBottomOf="@id/dataClearingTitle" />
 
