--- a/app/src/main/res/layout/content_onboarding_unified_private_search.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_private_search.xml
@@ -31,27 +31,15 @@
 
         <TextView
             android:id="@+id/browsingProtectionTitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif"
-            android:lineSpacingExtra="3sp"
             android:text="@string/unifiedOnboardingBrowsingProtectionTitle"
-            android:textColor="@color/almostBlack"
-            android:textSize="17sp"
-            android:textStyle="bold"
+            style="@style/OnboardingListItemTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/browsingProtectionSubtitle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
             android:text="@string/unifiedOnboardingBrowsingProtectionSubtitle"
-            android:textColor="@color/brownishGrayTwo"
-            android:textSize="15sp"
-            android:textStyle="normal"
+            style="@style/OnboardingListItemSubtitle"
             app:layout_constraintStart_toStartOf="@+id/browsingProtectionTitle"
             app:layout_constraintTop_toBottomOf="@id/browsingProtectionTitle" />
 
