--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -200,7 +200,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/onboardingTitleMarginTop</item>
         <item name="android:fontFamily">sans-serif-black</item>
-        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:lineSpacingExtra">3.5sp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/almostBlack</item>
         <item name="android:textSize">34sp</item>
@@ -211,10 +211,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:lineSpacingExtra">5sp</item>
+        <item name="android:lineSpacingExtra">3.75sp</item>
         <item name="android:textColor">@color/brownishGrayTwo</item>
         <item name="android:textSize">@dimen/onboardingSubtitleTextSize</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginTop">4dp</item>
     </style>
 
     <style name="OnboardingListItemImage">
@@ -226,6 +226,25 @@
         <item name="android:paddingStart">2dp</item>
         <item name="android:paddingEnd">2dp</item>
         <item name="android:paddingBottom">10dp</item>
+    </style>
+
+    <style name="OnboardingListItemTitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/almostBlack</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OnboardingListItemSubtitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/brownishGrayTwo</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="OnboardingTextSubtitle.Subtitle2">
@@ -307,5 +326,6 @@
         <item name="android:textStyle">normal</item>
         <item name="android:layout_marginTop">9dp</item>
     </style>
+
 
 </resources>
