--- a/app/src/main/res/layout-land/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout-land/content_onboarding_default_browser.xml
@@ -29,12 +29,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="42dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="42dp"
         android:importantForAccessibility="no"
         android:src="@drawable/set_as_default_browser_illustration"
         app:layout_constraintBottom_toTopOf="@id/continueButton"
         app:layout_constraintDimensionRatio="1"
-        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toStartOf="@id/privateSearchTitle"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="@id/continueButton"
@@ -44,11 +44,11 @@
         android:id="@+id/privateSearchTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="3sp"
         android:text="@string/onboardingDefaultBrowserTitle"
         android:textAlignment="center"
-        android:layout_marginStart="20dp"
         android:textColor="@color/almostBlack"
         android:textSize="17sp"
         android:textStyle="bold"
@@ -76,28 +76,41 @@
         app:layout_constraintWidth_max="500dp" />
 
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/continueButton"
-        style="@style/OnboardingButtonPrimaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/button_contained_bg"
+        android:foreground="?attr/selectableItemBackground"
         android:text="@string/onboardingContinue"
-        android:theme="@style/OnboardingButtonPrimaryCta"
+        android:textColor="@color/white"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_max="400dp" />
 
-    <com.google.android.material.button.MaterialButton
+
+    <Button
         android:id="@+id/launchSettingsButton"
-        style="@style/OnboardingButtonSecondaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/report_broken_site_button_outlined_bg"
+        android:foreground="?attr/selectableItemBackground"
         android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
+        android:textColor="@color/cornflowerBlue"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_max="400dp"
+        app:layout_constraintWidth_percent="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
