--- a/app/src/main/res/layout/content_onboarding_default_browser.xml
+++ b/app/src/main/res/layout/content_onboarding_default_browser.xml
@@ -28,18 +28,18 @@
         android:id="@+id/defaultBrowserImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="40dp"
         android:layout_marginTop="42dp"
         android:layout_marginBottom="42dp"
         android:importantForAccessibility="no"
-        android:layout_margin="40dp"
-        app:layout_constraintWidth_max="300dp"
         android:src="@drawable/set_as_default_browser_illustration"
         app:layout_constraintBottom_toTopOf="@id/privateSearchTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintWidth_max="300dp" />
 
     <TextView
         android:id="@+id/privateSearchTitle"
@@ -74,24 +74,22 @@
         app:layout_constraintWidth_max="500dp"
         app:layout_constraintWidth_percent="0.8" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/continueButton"
-        style="@style/OnboardingButtonPrimaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
         android:text="@string/onboardingContinue"
-        android:theme="@style/OnboardingButtonPrimaryCta"
+        style="@style/OnboardingButtonPrimaryCta"
         app:layout_constraintBottom_toTopOf="@+id/launchSettingsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
+
+    <Button
         android:id="@+id/launchSettingsButton"
-        style="@style/OnboardingButtonSecondaryCta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        style="@style/OnboardingButtonSecondaryCta"
         android:text="@string/onboardingDefaultBrowserGoToSettingsAction"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
