Replace vectors with PNGs (blurry on API 21)

--- a/app/src/main/res/layout/content_onboarding_unified_welcome.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_welcome.xml
@@ -84,7 +84,7 @@
                     android:id="@+id/browsingProtectionIcon"
                     style="@style/OnboardingListItemImage"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/ic_icon_search_privately"
+                    android:src="@drawable/icon_block_trackers_alt"
                     app:layout_constraintBottom_toBottomOf="@id/privateSearchGroup"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +96,7 @@
                     android:id="@+id/privateSearchIcon"
                     style="@style/OnboardingListItemImage"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/ic_icon_block_trackers_alt"
+                    android:src="@drawable/icon_search_privately"
                     app:layout_constraintBottom_toBottomOf="@id/browsingProtectionGroup"
                     app:layout_constraintEnd_toEndOf="@+id/browsingProtectionIcon"
                     app:layout_constraintStart_toStartOf="@id/browsingProtectionIcon"
@@ -108,7 +108,7 @@
                     android:id="@+id/dataClearingIcon"
                     style="@style/OnboardingListItemImage"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/ic_icon_flame"
+                    android:src="@drawable/icon_flame"
                     app:layout_constraintBottom_toBottomOf="@id/dataClearingGroup"
                     app:layout_constraintEnd_toEndOf="@+id/browsingProtectionIcon"
                     app:layout_constraintStart_toStartOf="@id/browsingProtectionIcon"
@@ -120,7 +120,7 @@
                     android:id="@+id/customizationIcon"
                     style="@style/OnboardingListItemImage"
                     android:importantForAccessibility="no"
-                    android:src="@drawable/ic_icon_customize"
+                    android:src="@drawable/icon_customize"
                     app:layout_constraintBottom_toBottomOf="@id/customizationGroup"
                     app:layout_constraintEnd_toEndOf="@+id/browsingProtectionIcon"
                     app:layout_constraintStart_toStartOf="@id/browsingProtectionIcon"
