Feature/onboarding improvements (#486)
* Remove unused activity

* Suppress lint warning

* Add new onboarding page implementation

* Remove redundant assets

* Add new assets

* Reorder elements on unified welcome screen

* Update set default screen to match new designs

* Add tests for onboarding logic

* Add landscape version of default browser

* Ensure continue button retains correct text across config changes

* Behavioural differences between launching onboarding from settings

* Add pixels for onboarding default browser

* Code tidy

* Code tidy

* Code tidy

* Removing unused resources

* Update tooling

* More centered view for unified welcome screen

* Tidying up UI

* Rollback to earlier material design version as this one crashes webview

* Rollback AGP and gradle version to make testing easier

* Replace vectors with PNGs (blurry on API 21)

* Make buttons the same size

* Update pixel value

--- a/app/src/main/res/drawable/onboarding_secondary_cta_button_outlined_bg.xml
+++ b/app/src/main/res/drawable/onboarding_secondary_cta_button_outlined_bg.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2019 DuckDuckGo
   ~
@@ -15,7 +14,10 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <dimen name="feedbackTitleMarginTop">20dp</dimen>
-    <dimen name="onboardingTitleMarginTop">8dp</dimen>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="1.5dp"
+        android:color="@color/cornflowerBlue" />
+
+    <corners android:radius="4dp" />
+</shape>
