--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,59 +168,80 @@
         <item name="android:color">@color/browser_menu_text</item>
     </style>
 
-    <style name="OnboardingButtonStyle" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:elevation">0dp</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/onboardingButtonTextSize</item>
-        <item name="android:paddingTop">@dimen/onboardingButtonPadding</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:paddingBottom">@dimen/onboardingButtonPadding</item>
+    <style name="OnboardingButtonPrimaryCta">
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:background">@drawable/button_contained_bg</item>
         <item name="android:layout_marginBottom">20dp</item>
-        <item name="android:text">@string/onboardingContinue</item>
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="layout_constraintWidth_max">400dp</item>
+        <item name="layout_constraintWidth_percent">0.8</item>
+        <item name="backgroundTint">@color/cornflowerBlue</item>
+    </style>
+
+    <style name="OnboardingButtonSecondaryCta">
+        <item name="android:background">@drawable/onboarding_secondary_cta_button_outlined_bg</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/cornflowerDark</item>
+        <item name="android:textAllCaps">true</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
-        <item name="android:stateListAnimator">@null</item>
-    </style>
-
-    <style name="OnboardingButtonProtectData" parent="OnboardingButtonStyle">
-        <item name="colorAccent">@color/muddyGreen</item>
-    </style>
-
-    <style name="OnboardingButtonNoTrace" parent="OnboardingButtonStyle">
-        <item name="colorAccent">@color/denimBlue</item>
-    </style>
-
-    <style name="OnboardingButtonDefaultBrowser" parent="OnboardingButtonStyle">
-        <item name="colorAccent">@color/portGore</item>
-    </style>
-
-    <style name="OnboardingButtonDefaultBrowserLaunchSettings" parent="OnboardingButtonStyle">
-        <item name="colorAccent">@color/eastSide</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="layout_constraintWidth_max">400dp</item>
+        <item name="layout_constraintWidth_percent">0.8</item>
     </style>
 
     <style name="OnboardingTextTitle">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:paddingBottom">20dp</item>
-        <item name="android:paddingTop">20dp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/onboardingTitleTextSize</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:layout_marginTop">@dimen/onboardingTitleMarginTop</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:lineSpacingExtra">3.5sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/almostBlack</item>
+        <item name="android:textSize">34sp</item>
     </style>
 
     <style name="OnboardingTextSubtitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:lineSpacingExtra">3.75sp</item>
+        <item name="android:textColor">@color/brownishGrayTwo</item>
+        <item name="android:textSize">@dimen/onboardingSubtitleTextSize</item>
+        <item name="android:layout_marginTop">4dp</item>
+    </style>
+
+    <style name="OnboardingListItemImage">
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">64dp</item>
+    </style>
+
+    <style name="OnboardingListItem">
+        <item name="android:paddingStart">2dp</item>
+        <item name="android:paddingEnd">2dp</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
+
+    <style name="OnboardingListItemTitle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/almostBlack</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OnboardingListItemSubtitle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:lineSpacingExtra">4sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/onboardingSubtitleTextSize</item>
+        <item name="android:textColor">@color/brownishGrayTwo</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="OnboardingTextSubtitle.Subtitle2">
@@ -228,7 +249,7 @@
         <item name="android:lineSpacingExtra">6sp</item>
     </style>
 
-    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert" >
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="buttonBarNegativeButtonStyle">@style/AlertDialogButtonStyle</item>
         <item name="buttonBarPositiveButtonStyle">@style/AlertDialogButtonStyle</item>
     </style>
@@ -237,7 +258,7 @@
         <item name="android:textColor">@color/cornflowerBlue</item>
     </style>
 
-    <style name="FeedbackFragmentStyle" >
+    <style name="FeedbackFragmentStyle">
         <item name="android:background">?attr/colorPrimaryDark</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -302,5 +323,6 @@
         <item name="android:textStyle">normal</item>
         <item name="android:layout_marginTop">9dp</item>
     </style>
+
 
 </resources>
